--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -26,6 +25,22 @@ jobs:
 
     - name: Remove vendor directory if it exists
       run: if [ -d "vendor" ]; then rm -rf vendor; fi
+
+    - name: Remove Go build cache
+      run: go clean -cache
+
+    - name: Verify case sensitivity
+      run: |
+        if [ -d "github.com/garrettkrohn/treekanga/Transformer" ]; then
+          echo "Directory with incorrect case exists"
+          exit 1
+        fi
+        if [ -d "github.com/garrettkrohn/treekanga/transformer" ]; then
+          echo "Directory with correct case exists"
+        else
+          echo "Directory with correct case does not exist"
+          exit 1
+        fi
 
     - name: Build
       run: go build -v ./...
