--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,8 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
+name: Go
+
 on:
   push:
     branches: [ "main" ]
@@ -8,49 +10,16 @@ on:
     branches: [ "main" ]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Ensure a full checkout
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.23.0'
-
-    - name: Clear Go module cache
-      run: go clean -modcache
-
-    - name: Remove vendor directory if it exists
-      run: if [ -d "vendor" ]; then rm -rf vendor; fi
-
-    - name: Remove Go build cache
-      run: go clean -cache
-
-    - name: Explicitly rename directory to correct case
-      run: |
-        if [ -d "github.com/garrettkrohn/treekanga/Transformer" ]; then
-          mv github.com/garrettkrohn/treekanga/Transformer github.com/garrettkrohn/treekanga/tempname
-          mv github.com/garrettkrohn/treekanga/tempname github.com/garrettkrohn/treekanga/transformer
-        fi
-
-    - name: List directory contents
-      run: ls -lR
-
-    - name: Verify case sensitivity
-      run: |
-        if [ -d "github.com/garrettkrohn/treekanga/Transformer" ]; then
-          echo "Directory with incorrect case exists"
-          exit 1
-        fi
-        if [ -d "github.com/garrettkrohn/treekanga/transformer" ]; then
-          echo "Directory with correct case exists"
-        else
-          echo "Directory with correct case does not exist"
-          exit 1
-        fi
 
     - name: Build
       run: go build -v ./...
