--- a/.github/workflows/build-test-and-release.yml
+++ b/.github/workflows/build-test-and-release.yml
@@ -4,10 +4,12 @@
 name: build-test-and-release
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    types: [opened, synchronize]
+  push:
+    branches: [main]
+    tags:
+      - "*"
 
 jobs:
   tests:
