--- a/.github/workflows/build-test-and-release.yml
+++ b/.github/workflows/build-test-and-release.yml
@@ -65,3 +65,6 @@ jobs:
         run: |
           brew install garrettkrohn/treekanga/treekanga
       # TODO: assert the latest version was installed
+      - name: Check version
+        run: |
+          treekanga --version
