--- a/.github/workflows/build-test-and-release.yml
+++ b/.github/workflows/build-test-and-release.yml
@@ -65,11 +65,11 @@ jobs:
         run: |
           brew install garrettkrohn/treekanga/treekanga
       # TODO: assert the latest version was installed
-      - name: Create config file
-        run: |
-          mkdir .config
-          cd .config
-          touch treekanga
-      - name: Check version
-        run: |
-          /opt/homebrew/bin/treekanga --version
+      # - name: Create config file
+      #   run: |
+      #     mkdir .config
+      #     cd .config
+      #     touch treekanga
+      # - name: Check version
+      #   run: |
+      #     /opt/homebrew/bin/treekanga --version
