--- a/.github/workflows/build-test-and-release.yml
+++ b/.github/workflows/build-test-and-release.yml
@@ -12,26 +12,26 @@ on:
       - "*"
 
 jobs:
-  # tests:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest, macos-latest]
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-go@v5
-  #       with:
-  #         go-version: "1.21"
-  #     - name: Install deps
-  #       run: go install github.com/jstemmer/go-junit-report/v2@latest
-  #     - name: Run tests
-  #       run: go test -cover -bench=. -benchmem -race -v 2>&1 ./... | go-junit-report -set-exit-code > report.xml
-  #     - name: Test Summary
-  #       uses: test-summary/action@v2
-  #       with:
-  #         paths: |
-  #           report.xml
-  #       if: always()
+  tests:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.21"
+      - name: Install deps
+        run: go install github.com/jstemmer/go-junit-report/v2@latest
+      - name: Run tests
+        run: go test -cover -bench=. -benchmem -race -v 2>&1 ./... | go-junit-report -set-exit-code > report.xml
+      - name: Test Summary
+        uses: test-summary/action@v2
+        with:
+          paths: |
+            report.xml
+        if: always()
 
   goreleaser:
     name: Build and Publish
