--- a/.github/workflows/build-test-and-release.yml
+++ b/.github/workflows/build-test-and-release.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.24"
+          go-version: "1.21"
       - name: Install deps
         run: go install github.com/jstemmer/go-junit-report/v2@latest
       - name: Run tests
@@ -46,7 +46,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.24"
+          go-version: "1.21"
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
@@ -63,5 +63,5 @@ jobs:
     steps:
       - name: Install with brew
         run: |
-          brew install --cask garrettkrohn/treekanga/treekanga
+          brew install garrettkrohn/treekanga/treekanga
       # TODO: assert the latest version was installed
